--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@ body {
     display: flex;
 }
 
+h1 {
+    font-size: 16px;
+    font-family: 'Times New Roman', Times, serif;
+}
+
 #left-container{
     display: flex;
     flex-direction: column;
@@ -26,6 +31,12 @@ body {
     flex-direction: column;
 }
 
-#headline-display {
+#display {
+    padding: 16px 16px 16px 16px;
+    border: solid 4px;
+    border-radius: 12px;
+}
+
+#headline-display{
     margin-left: 10%;
 }
